--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Descent</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="main.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
     <div id="main"></div>
